--- a/app/views/kasittelija/hakemuskaudenHallinta.html
+++ b/app/views/kasittelija/hakemuskaudenHallinta.html
@@ -42,7 +42,7 @@
           </div>
         </div>
         <div class="col-md-3 text-center">
-          <div class="panel panel-primary hakemuskausi-panel">
+          <div class="panel panel-primary hakemuskausi-panel clickable" data-ng-click="valitseHakemustyyppi('AH0')">
             <div class="panel-heading">
               <p class="panel-title">Avustushakemus</p>
             </div>
@@ -89,7 +89,7 @@
           </div>
         </div>
         <div class="col-md-3 text-center">
-          <div class="panel panel-info hakemuskausi-panel">
+          <div class="panel panel-info hakemuskausi-panel clickable" data-ng-click="valitseHakemustyyppi('MH1')">
             <div class="panel-heading">
               <p class="panel-title">1. maksatushakemus</p>
             </div>
@@ -136,7 +136,7 @@
           </div>
         </div>
         <div class="col-md-3 text-center">
-          <div class="panel panel-info hakemuskausi-panel">
+          <div class="panel panel-info hakemuskausi-panel clickable" data-ng-click="valitseHakemustyyppi('MH2')">
             <div class="panel-heading">
               <p class="panel-title">2. maksatushakemus</p>
             </div>
