LIVIJUKU-191 Typo Joukkoliikenten 1.maksatushakemus 2016

--- a/app/views/hakija/hakemus.html
+++ b/app/views/hakija/hakemus.html
@@ -19,7 +19,7 @@
     </div>
     <div class="row">
       <div class="col-md-12">
-        <h2>Joukkoliikenten valtionavustushakemus {{hakemus.vuosi}}</h2>
+        <h2>Joukkoliikenteen valtionavustushakemus {{hakemus.vuosi}}</h2>
       </div>
     </div>
     <div class="row" ng-show="hasPaatos(tyyppi, hakemus.hakemustilatunnus)">
