--- a/app/views/hakija/hakemusEsikatselu.html
+++ b/app/views/hakija/hakemusEsikatselu.html
@@ -21,13 +21,13 @@
     <div class="row">
       <div class="col-md-12">
         <div ng-show="(tyyppi == 'AH0')">
-          <h2>Joukkoliikenten valtionavustushakemus {{hakemus.vuosi}}</h2>
+          <h2>Joukkoliikenteen valtionavustushakemus {{hakemus.vuosi}}</h2>
         </div>
         <div ng-show="(tyyppi == 'MH1')">
-          <h2>Joukkoliikenten 1. maksatushakemus {{hakemus.vuosi}}</h2>
+          <h2>Joukkoliikenteen 1. maksatushakemus {{hakemus.vuosi}}</h2>
         </div>
         <div ng-show="(tyyppi == 'MH2')">
-          <h2>Joukkoliikenten 2. maksatushakemus {{hakemus.vuosi}}</h2>
+          <h2>Joukkoliikenteen 2. maksatushakemus {{hakemus.vuosi}}</h2>
         </div>
       </div>
     </div>
