--- a/app/views/hakija/maksatusHakemus.html
+++ b/app/views/hakija/maksatusHakemus.html
@@ -19,7 +19,7 @@
 
           <div class="row">
             <div class="col-md-12">
-              <h2>Joukkoliikenten 1.maksatushakemus {{vuosi}}</h2>
+              <h2>Joukkoliikenteen 1. maksatushakemus {{vuosi}}</h2>
             </div>
           </div>
         </div>
@@ -37,7 +37,7 @@
 
           <div class="row">
             <div class="col-md-12">
-              <h2>Joukkoliikenten 2.maksatushakemus {{vuosi}}</h2>
+              <h2>Joukkoliikenteen 2. maksatushakemus {{vuosi}}</h2>
             </div>
           </div>
         </div>
