--- a/app/views/hakija/maksatusHakemus.html
+++ b/app/views/hakija/maksatusHakemus.html
@@ -734,8 +734,8 @@
                     <div class="sel-file" ng-repeat="l in liitteet">
                       <div ng-show="(hakemus.hakemustilatunnus == 'K' || hakemus.hakemustilatunnus == 'T0')">
                         <div ng-show="l.liitenumero!=editoitavaLiite">
-                          <p><i class="glyphicon glyphicon-file"></i>
-                            <a href="api/hakemus/{{hakemusid}}/liite/{{l.liitenumero}}" target="_blank">{{l.nimi}}
+                          <p>
+                            <a href="api/hakemus/{{hakemusid}}/liite/{{l.liitenumero}}" target="_blank"><span class="glyphicon glyphicon-file"></span>{{l.nimi}}
                               ({{l.contenttype}})</a>
                             <a ng-show="sallittu('modify-oma-hakemus')" href="" title="Muuta liitenimi"
                                ng-click="asetaEditTilaan(l.liitenumero)"><span
@@ -746,7 +746,7 @@
                           </p>
                         </div>
                         <div ng-show="l.liitenumero==editoitavaLiite">
-                          <p><i class="glyphicon glyphicon-file"></i>
+                          <p><span class="glyphicon glyphicon-file"></span>
                             <input name="liitenimi" type="text" class="input-small"
                                    ng-model="l.nimi"
                                    ng-focus="asetaLiitenimi(l.nimi)"
@@ -768,8 +768,8 @@
                       </div>
                       <div
                         ng-hide="(hakemus.hakemustilatunnus == 'K' || hakemus.hakemustilatunnus == 'T0') && sallittu('modify-oma-hakemus')">
-                        <p><i class="glyphicon glyphicon-file"></i>
-                          <a href="api/hakemus/{{hakemusid}}/liite/{{l.liitenumero}}">{{l.nimi}}
+                        <p>
+                          <a href="api/hakemus/{{hakemusid}}/liite/{{l.liitenumero}}"><span class="glyphicon glyphicon-file"></span>{{l.nimi}}
                             ({{l.contenttype}})</a>
                         </p>
                       </div>
