--- a/app/views/kasittelija/hakemus.html
+++ b/app/views/kasittelija/hakemus.html
@@ -490,8 +490,8 @@
             <div class="col-md-12">
               <div ng-show="liitteet.length > 0" class="response">
                 <div class="sel-file" ng-repeat="l in liitteet">
-                  <p><i class="glyphicon glyphicon-file"></i>
-                    <a href="api/hakemus/{{hakemus.id}}/liite/{{l.liitenumero}}" target="_blank">{{l.nimi}}
+                  <p>
+                    <a href="api/hakemus/{{hakemus.id}}/liite/{{l.liitenumero}}" target="_blank"><span class="glyphicon glyphicon-file"></span>{{l.nimi}}
                       ({{l.contenttype}})</a>
                   </p>
                 </div>
